export const snapshot = {};

snapshot[`parcelCSS plugin 1`] = `2`;

snapshot[`parcelCSS plugin 2`] = `
{
  formats: [
    {
      data: undefined,
      includesPath: undefined,
      key: ".tmpl.ts",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      data: undefined,
      includesPath: undefined,
      key: ".tmpl.js",
      loader: [AsyncFunction: module],
      page: true,
      removeExtension: true,
    },
    {
      data: undefined,
      includesPath: undefined,
      key: ".tmpl.json",
      loader: [AsyncFunction: json],
      page: true,
      removeExtension: true,
    },
    {
      data: true,
      includesPath: undefined,
      key: ".json",
      loader: [AsyncFunction: json],
      page: undefined,
      removeExtension: undefined,
    },
    {
      data: undefined,
      includesPath: undefined,
      key: ".md",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      data: true,
      includesPath: undefined,
      key: ".js",
      loader: [AsyncFunction: module],
      page: undefined,
      removeExtension: undefined,
    },
    {
      data: true,
      includesPath: undefined,
      key: ".ts",
      loader: [AsyncFunction: module],
      page: undefined,
      removeExtension: undefined,
    },
    {
      data: undefined,
      includesPath: "_includes",
      key: ".njk",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: true,
    },
    {
      data: true,
      includesPath: undefined,
      key: ".yaml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      data: true,
      includesPath: undefined,
      key: ".yml",
      loader: [AsyncFunction: yaml],
      page: true,
      removeExtension: true,
    },
    {
      data: undefined,
      includesPath: undefined,
      key: ".css",
      loader: [AsyncFunction: text],
      page: true,
      removeExtension: undefined,
    },
  ],
}
`;

snapshot[`parcelCSS plugin 3`] = `
[
]
`;

snapshot[`parcelCSS plugin 4`] = `
{
  content: '@import "variables.css";@import "./text.css";',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`parcelCSS plugin 5`] = `
{
  content: ".text{font-family:var(--font-family)}.text p{color:var(--color);box-shadow:0 0 .5em var(--background);-webkit-backface-visibility:hidden;backface-visibility:hidden}",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;
